--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "news",
+  "name": "news-tts",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "xml2js": "^0.4.23"
-  }
+    "xml2js": "^0.4.23",
+    "say": "^0.16.0",
+    "node-fetch": "^3.3.2"
+  },
+  "type": "module"
 }
