--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "xml2js": "^0.4.23",
-    "say": "^0.16.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "google-tts-api": "^2.0.1"
   }
 }
