--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^4.2.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "xml2js": "^0.4.23",
